data/derived/comb/progs/unify/prog7637.ml.out
Characters 51-60:
  else [x] :: clone x n-1;;
              ^^^^^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type int
